# algebra-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cli/: CLI.cpp  CLI.h
include/: Matrix.h  MatrixException.h  Workspace.h
src/: Matrix.cpp  Workspace.cpp
tests/: matrixTests.cpp  run_tests.sh
tests/cliTests/: test01.expected.txt  test01.in.txt  test02.expected.txt  test02.in.txt  test03.expected.txt  test03.in.txt  test04.expected.txt  test04.in.txt  test05.expected.txt  test05.in.txt  test06.expected.txt  test06.in.txt  test07.expected.txt  test07.in.txt  test08.expected.txt  test08.in.txt  test09.expected.txt  test09.in.txt  test10.expected.txt  test10.in.txt  test11.expected.txt  test11.in.txt
